<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.healthcare.HealthCareActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back_healthcare"
        style="@style/BlueRoundButtonNoOutline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="16sp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_healthcare_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/health_care"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginVertical="12dp"/>

            <TextView
                android:id="@+id/tv_healthcare_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/health_care_2"
                android:textSize="18sp"
                android:textAlignment="center"
                android:paddingHorizontal="45dp"
                android:layout_below="@id/tv_healthcare_title"/>

            <Space
                android:id="@+id/space_healthcare"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/tv_healthcare_desc"/>

            <Spinner
                android:id="@+id/healthcare_searchbar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/health_search_hint"
                android:textSize="20sp"
                android:padding="10dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/custom_spinner_bg"
                android:spinnerMode="dropdown"
                android:elevation="1dp"/>

            <RelativeLayout
                android:id="@+id/healtcare_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_rounded_shadow"
                android:paddingTop="40dp"
                android:translationY="-26dp">

                <TextView
                    android:id="@+id/tv_pilih_kota"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:text="@string/health_care_pilih_kota"
                    android:textSize="22sp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:paddingHorizontal="40dp"
                    android:visibility="visible"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_health_care"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_health_care" />

            </RelativeLayout>



        </LinearLayout>
    </ScrollView>
</LinearLayout>