<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgotPassActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back_resetpass"
        style="@style/BlueRoundButtonNoOutline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="16sp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="3dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textStyle="bold"
        android:textSize="26sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginVertical="20dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:elevation="30dp"
        app:cardElevation="17dp"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="30dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/svg_reset_pass"
                android:layout_marginVertical="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_password_2"
                android:textStyle="bold"
                android:textSize="26sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_marginVertical="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_password_3"
                android:fontFamily="@font/inter_medium"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/email_input_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:textSize="18sp"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/custom_ic_email"
                android:drawablePadding="10dp"
                android:hint="Masukkan email anda"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send_email"
                style="@style/BlueRoundButtonNoOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textSize="18sp"
                android:fontFamily="@font/inter_bold"
                android:paddingVertical="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="3dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>