<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.editprofile.AddMedicalRecordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/penyakit"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_penyakit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:minHeight="48dp"
            android:padding="12dp" />

        <TextView
            android:id="@+id/tv_med_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/lamaPenyakit"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/custom_edit_text"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/et_med_years_profile"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:minHeight="48dp"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/tahun"
                android:textSize="18sp"
                android:textAlignment="textEnd"
                android:layout_marginEnd="3dp" />
        </LinearLayout>

        <Space
            android:layout_width="12dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/custom_edit_text"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/et_med_months_profile"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/bulan"
                android:textSize="18sp"
                android:fontFamily="@font/inter_medium"
                android:layout_marginEnd="3dp"
                android:textAlignment="textEnd"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel_med_profile"
            style="@style/CustomWhiteRoundButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_med_profile"
            style="@style/CustomBlueRoundButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>