<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:paddingVertical="25dp"
    android:paddingHorizontal="20dp"
    android:background="@drawable/custom_corner_rounded">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_logout_2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_logout"
        android:textSize="20sp"
        android:fontFamily="@font/inter_semibold"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:paddingHorizontal="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel_logout"
            style="@style/CustomWhiteRoundButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/tidak"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout_confirmed"
            style="@style/CustomBlueRoundButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/yakin"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>


</LinearLayout>