<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:paddingVertical="25dp"
    android:paddingHorizontal="20dp"
    android:background="@drawable/custom_corner_rounded">
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="16dp"
        android:src="@drawable/ep_finished"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_quiz"
        android:textSize="20sp"
        android:fontFamily="@font/inter_semibold"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:paddingHorizontal="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_quiz_cancel"
            style="@style/CustomWhiteRoundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="130dp"
            android:text="@string/kembali"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_quiz_confirmed"
            style="@style/CustomBlueRoundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="130dp"
            android:text="@string/yakin"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>