<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="18dp"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.reminder.DeleteReminderFragment">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:src="@drawable/ic_delete_file"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_delete"
        android:textSize="20sp"
        android:fontFamily="@font/inter_semibold"
        android:textAlignment="center"
        android:paddingHorizontal="12dp"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:paddingHorizontal="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel_delete"
            style="@style/CustomWhiteRoundButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete_confirmed"
            style="@style/CustomBlueRoundButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>